# scaffold-gen

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README-CN.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
.trae/rules/: project_rules.md
docs/readme/: README-CN.md
src/: constants.rs  lib.rs  main.rs  scaffold.rs  template_engine.rs
src/commands/: new.rs
src/generators/: mod.rs  orchestrator.rs
src/generators/core/: base_parameters.rs  generator.rs  mod.rs  parameters.rs  template_processor.rs  validation.rs
src/generators/framework/: mod.rs
src/generators/framework/gin/: generator.rs  mod.rs  parameters.rs
src/generators/framework/go_zero/: generator.rs  mod.rs  parameters.rs
src/generators/framework/react/: generator.rs  mod.rs  parameters.rs
src/generators/framework/tauri/: generator.rs  mod.rs  parameters.rs
src/generators/framework/vue3/: generator.rs  mod.rs  parameters.rs
src/generators/language/: mod.rs
src/generators/language/go/: generator.rs  mod.rs  parameters.rs
src/generators/language/python/: generator.rs  mod.rs  parameters.rs
src/generators/language/rust/: generator.rs  mod.rs  parameters.rs
src/generators/project/: generator.rs  mod.rs  parameters.rs
src/utils/: env_checker.rs  go_tools.rs  mod.rs
templates/frameworks/go/gin/: .gitignore.tmpl  .pre-commit-config.yaml.tmpl  Dockerfile.tmpl  README.md.tmpl  docker-compose.yml.tmpl  main.go.tmpl
templates/frameworks/go/go-zero/: .gitignore.tmpl  .pre-commit-config.yaml.tmpl  Dockerfile.api.tmpl  README.md.tmpl  (+16 more)
templates/languages/go/: .gitignore.tmpl
templates/languages/python/: .env.dev.tmpl  .env.example.tmpl  .env.tmpl  .gitignore.tmpl  .pre-commit-config.yaml.tmpl  README.md.tmpl  main.py.tmpl
templates/languages/rust/: .gitignore.tmpl  .pre-commit-config.yaml.tmpl  Cargo.toml.tmpl  Makefile.tmpl  README.md.tmpl
templates/licenses/: Apache-2.0.tmpl  GPL-3.0.tmpl  ISC.tmpl  MPL-2.0.tmpl
(+84 files in other folders)
