[package]
name = "scaffold-gen"
version = "0.1.0"
edition = "2024"
description = "A modern scaffolding generator for creating project templates"
authors = ["nkuzhangshn@gmail.com"]
build = "build.rs"

[[bin]]
name = "scafgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
inquire = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "3"
indicatif = "0.18"
which = "8"
async-trait = "0.1"
handlebars = "6"
regex = "1"
chrono = { version = "0.4.42", features = ["serde"] }
tempfile = "3.23.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
