[package]
name = "scaffold-gen"
version = "0.0.6"
license = "MIT"
edition = "2024"
description = "A modern scaffolding generator for creating project templates"
authors = ["nkuzhangshn@gmail.com"]
build = "build.rs"
repository = "https://github.com/sunerpy/scaffold-gen"                        # 仓库地址
homepage = "https://github.com/sunerpy/scaffold-gen"                          # 可选，同 repository 即可
keywords = ["cli", "scaffold", "scafgen"]                                     # 可选，≤ 5 个
categories = ["command-line-utilities"]                                       # 可选，见 crates.io/categories
readme = "README.md"
[[bin]]
name = "scafgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
inquire = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "3"
indicatif = "0.18"
which = "8"
async-trait = "0.1"
handlebars = "6"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
walkdir = "2"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
